--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15802],[[4,5,6,0,[],[1,27,15770],[[7,8,9,0,[],[1,30,15765],[[7,10,11,12,[],[1,33,15759],[],[[13,0,14,[],[1,314,15474],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12767],[[4,5,6,0,[],[1,22,12742],[[7,8,9,0,[],[1,25,12734],[[10,11,12,13,[],[1,28,12729],[],[[14,0,15,[],[1,275,12477],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*projetoRobot","*C:\\projetoRobot","*..","*Tests","*C:\\projetoRobot\\tests","*../tests","*Login","*C:\\projetoRobot\\tests\\login","*../tests/login","*C:\\projetoRobot\\tests\\login\\login.robot","*../tests/login/login.robot","*<p>Cenário de teste que valida a página de login do IDEAL Game.\x3c/p>","*Login com sucesso no Ideal Game","*<p>Valida se o usuário consegue logar com credenciais válidas\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*projetoRobot","*C:\\projetoRobot","*..","*Tests","*C:\\projetoRobot\\tests","*../tests","*Register","*C:\\projetoRobot\\tests\\register","*../tests/register","*registerWhenTheAccountExists","*C:\\projetoRobot\\tests\\register\\registerWhenTheAccountExists.robot","*../tests/register/registerWhenTheAccountExists.robot","*<p>Cenário de teste que realiza a validação do cadastro\x3c/p>","*Login com sucesso no Ideal Game","*<p>Valida o registro do usuário\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"projetoRobot","name":"projetoRobot","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"projetoRobot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1","label":"projetoRobot.Tests.Login","name":"Login","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1-s1-s1","label":"projetoRobot.Tests.Login.Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"projetoRobot","name":"projetoRobot","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1","label":"projetoRobot.Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1-s1","label":"projetoRobot.Tests.Register","name":"Register","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s1-s1-s1","label":"projetoRobot.Tests.Register.registerWhenTheAccountExists","name":"registerWhenTheAccountExists","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1769473171166;
+window.output["baseMillis"] = 1769480491909;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15824;
+window.output["generated"] = 12782;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
